--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">-</p>
         </div>
         <div id="includeIntroduction"></div>
+        <div id="includePlot"></div>
       </div>
     </section>
     <!-- Services Section End -->
@@ -421,8 +422,10 @@
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
     <script> 
+
       $(function(){
         $("#includeIntroduction").load("include/introduction.html"); 
+        $("#includePlot").load("include/test_plotly.html");
       });
       </script> 
     <script src="js/popper.min.js"></script>
