--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <a class="page-scroll" href="#">Home</a>
             </li>
             <li>
-              <a class="page-scroll" href="##RQ1">Threshold test</a>
+              <a class="page-scroll" href="#RQ1">Threshold test</a>
             </li>
             <li>
               <a class="page-scroll" href="##RQ2">Veil of Darkness</a>
@@ -176,7 +176,7 @@
     <!-- Features Section End -->    
 
     <!-- Portfolio Section -->
-    <section id="portfolios" class="section">
+    <section id="RQ1" class="section">
       <!-- Container Starts -->
       <div class="container">
         <div class="section-header">          
