--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
           <h2 class="section-title">Research Question 2</h2>
           <hr class="lines">
           <p class="section-subtitle">Do officers stop and search men more than women? --- veil of darkness</p>
+          <div id="includePlot"></div>
         </div>
       </div>
     </div>
