--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
           <h2 class="section-title">Research Question 2</h2>
           <hr class="lines">
           <p class="section-subtitle">Do officers stop and search men more than women? --- veil of darkness</p>
-          <div id="includePlot"></div>
         </div>
+        <div id="includePlot2"></div>
       </div>
     </div>
     <!-- End Pricing Table Section -->
@@ -427,6 +427,7 @@
       $(function(){
         $("#includeIntroduction").load("include/introduction.html"); 
         $("#includePlot").load("include/test_plotly.html");
+        $("#includePlot2").load("include/test_plotly.html");
       });
       </script> 
     <script src="js/popper.min.js"></script>
