--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <hr class="lines">
           <p class="section-subtitle">Do officers stop and search men more than women? --- veil of darkness</p>
         </div>
-        <div id="includePlot2"></div>
+        <div id="Arizona_dusk_delta_stops"></div>
       </div>
     </div>
     <!-- End Pricing Table Section -->
@@ -427,7 +427,7 @@
       $(function(){
         $("#includeIntroduction").load("include/introduction.html"); 
         $("#includePlot").load("include/test_plotly.html");
-        $("#includePlot2").load("include/test_plotly.html");
+        $("#Arizona_dusk_delta_stops").load("include/rq2_melike/Arizona_dusk_delta_stops.html");
       });
       </script> 
     <script src="js/popper.min.js"></script>
