--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       <!-- Navbar End -->   
       <div class="container">      
         <div class="row justify-content-md-center">
-          <div class="col-md-10">
+          <div class="col-md-12">
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">GENDER BIAS IN POLICE STOP ACROSS THE US</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Do police stop more men than women?</p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Do police stop more men than women based on less evidence?</p>
               <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Discover more</a>
             </div>
           </div>
