--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team1.jpg" alt="">
+              <img src="img/team/team1.jpeg" alt="" height="350px">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Aaron Lippeveldts</h4>
@@ -355,7 +355,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team2.jpg" alt="">
+              <img src="img/team/team2.jpg" alt="" height="350px">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Alpha Diallo</h4>
@@ -372,7 +372,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team3.jpg" alt="">
+              <img src="img/team/team3.png" alt="" height="350px">
               <div class="team-details">
                 <div class="team-inner">                  
                   <h4 class="team-title">Melike Gecer</h4>
