--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   </div>
                   <div class="col-lg-6 col-sm-6 col-xs-12 box-item">
                     <span class="icon">
-                      <i class="lnr lnr-cog"></i>
+                      <i class="lnr lnr-laptop-phone"></i>
                     </span>
                     <div class="text">
                       <h4>22% of AI professionals are women </h4>
@@ -289,33 +289,30 @@
             <div class="col-md-12">
               <div class="touch-slider owl-carousel owl-theme">
                 <div class="testimonial-item">
-                  <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
-                  <div class="testimonial-text">
+                 <div class="testimonial-text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
                     <h3>Jone Deam</h3>
                     <span>Fondor of Jalmori</span>
                   </div>
                 </div>
                 <div class="testimonial-item">
-                  <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
+                
                   <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
+                    <p>Some results here</p>
                     <h3>Oidila Matik</h3>
                     <span>President Lexo Inc</span>
                   </div>
                 </div>
                 <div class="testimonial-item">
-                  <img src="img/testimonial/customer3.jpg" alt="Client Testimonoal" />
                   <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
+                    <p>Some results here</p>
                     <h3>Alex Dattilo</h3>
                     <span>CEO Optima Inc</span>
                   </div>
                 </div>
                 <div class="testimonial-item">
-                  <img src="img/testimonial/customer4.jpg" alt="Client Testimonoal" />
                   <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
+                    <p>Some results here</p>
                     <h3>Paul Kowalsy</h3>
                     <span>CEO & Founder</span>
                   </div>
@@ -333,7 +330,6 @@
         <div class="section-header">          
           <h2 class="section-title">Our Team</h2>
           <hr class="lines">
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -362,7 +358,7 @@
                   <p>State Alchemist</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li class="twitter"><a href="https://www.twitter.com/alphadiallo009"><i class="fa fa-twitter"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
