--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
           <p class="section-subtitle">
             Do police stop women more than men based on less evidence?</p>
         </div>
+        <div id="rq1_text"></div>
         
       </div>
       <!-- Container Ends -->
@@ -421,8 +422,13 @@
 
       $(function(){
         $("#includeIntroduction").load("./include/introduction.html"); 
-        //$("#includePlot").load("include/test_plotly.html");
-        //$("#Arizona_dusk_delta_stops").load("include/rq2_melike/Arizona_dusk_delta_stops.html");
+        $("#rq1_text").load("./include/rq1.html");
+        $("#rq1_1").load("./include/rq1_1.html");
+        $("#rq1_2").load("./include/rq1_2.html");
+
+        $("#includePlot").load("./include/test_plotly.html");
+        $("#Arizona_dusk_delta_stops").load("./include/rq2_melike/Arizona_dusk_delta_stops.html");
+
       });
       </script> 
     <script src="js/popper.min.js"></script>
