--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
     <!-- End Video Promo Section -->
 
     <!-- Start Pricing Table Section -->
-    <div id="RQ2" class="section">
+   <div id="RQ2" class="section">
       <div class="container">
-        <div class="section-header">          
-          <h2 class="section-title">Research Question 2</h2>
+        <div class="section-header">
+          <h2 class="section-title">Research Question 2</h2><p>
+
           <hr class="lines">
-          <p class="section-subtitle">Do officers stop and search men more than women? --- veil of darkness</p>
         </div>
-        <div id="Arizona_dusk_delta_stops"></div>
+        <div id="rq2_text"></div>
       </div>
     </div>
     <!-- End Pricing Table Section -->
@@ -423,6 +423,9 @@
       $(function(){
         $("#includeIntroduction").load("./include/introduction.html"); 
         $("#rq1_text").load("./include/rq1.html");
+        $("#rq2_text").load("./include/rq2.html");
+        $("#dusk_delta_searches").load("./include/dusk_delta_searches.html");
+        $("#dusk_delta_searches_success").load("./include/dusk_delta_searches_success.html");
         $("#rq1_1").load("./include/rq1_1.html");
         $("#rq1_2").load("./include/rq1_2.html");
 
