--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
           <hr class="lines">
           <p class="section-subtitle">Do officers with less experience stop men more than women? --- veil of darkness</p>
         </div>
+        <div id="rq3-text"></div>
       </div>
     </div>
 
@@ -424,10 +425,16 @@
         $("#includeIntroduction").load("./include/introduction.html"); 
         $("#rq1_text").load("./include/rq1.html");
         $("#rq2_text").load("./include/rq2.html");
+        $("#rq3-text").load("./include/rq3.html");
         $("#dusk_delta_searches").load("./include/dusk_delta_searches.html");
         $("#dusk_delta_searches_success").load("./include/dusk_delta_searches_success.html");
         $("#rq1_1").load("./include/rq1_1.html");
         $("#rq1_2").load("./include/rq1_2.html");
+        $("#fl").load("./include/fl.html");
+        $("#fl_exp").load("./include/fl_experience.html");
+
+        $("#includePlot").load("./include/test_plotly.html");
+        $("#Arizona_dusk_delta_stops").load("./include/rq2_melike/Arizona_dusk_delta_stops.html");
 
       });
       </script> 
