--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="row justify-content-md-center">
           <div class="col-md-12">
             <div class="contents text-center">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">GENDER BIAS IN POLICE STOP ACROSS THE US</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Do police stop more men than women based on less evidence?</p>
+              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">ANALYSIS OF SEXUAL DISCRIMINATION IN POLICE STOPS ACROSS THE US</h1>
+              <!--<p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Do police stop more men than women based on less evidence?</p>-->
               <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Discover more</a>
             </div>
           </div>
