--- a/index.html
+++ b/index.html
@@ -190,21 +190,20 @@
     </section>
     <!-- Portfolio Section Ends --> 
 
-    <!-- Start Video promo Section -->
+    <!-- Stop -->
     <section class="video-promo section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
               <div class="video-promo-content text-center">
-                <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Data visualization</h2>
-                <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Here, we need to add some plots.</p>
-                <a href="https://www.youtube.com/watch?v=IXoMDwh4Cq8" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-code"></i></a>
+                <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Next step</h2>
+                <a href="#" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-code"></i></a>
               </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- End Video Promo Section -->
+    <!-- stop -->
 
     <!-- Start Pricing Table Section -->
    <div id="RQ2" class="section">
@@ -219,59 +218,20 @@
     </div>
     <!-- End Pricing Table Section -->
 
-    <!-- Counter Section Start -->
-    <div class="counters section" data-stellar-background-ratio="0.5">
+   <!-- Stop -->
+    <section class="video-promo section">
       <div class="container">
-        <h2 class="section-title-counter">Some statistics again</h2>
-        <div class="row"> 
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item">   
-              <div class="icon">
-                <i class="lnr lnr-clock"></i>
-              </div>             
-              <div class="fact-count">
-                <h3><span class="counter">1589</span></h3>
-                <h4>Working Hours</h4>
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+              <div class="video-promo-content text-center">
+                <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Next step</h2>
+                <a href="#" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-code"></i></a>
               </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item">   
-              <div class="icon">
-                <i class="lnr lnr-briefcase"></i>
-              </div>            
-              <div class="fact-count">
-                <h3><span class="counter">699</span></h3>
-                <h4>Completed Projects</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item"> 
-              <div class="icon">
-                <i class="lnr lnr-user"></i>
-              </div>              
-              <div class="fact-count">
-                <h3><span class="counter">203</span></h3>
-                <h4>No. of Clients</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item"> 
-              <div class="icon">
-                <i class="lnr lnr-heart"></i>
-              </div>              
-              <div class="fact-count">
-                <h3><span class="counter">1689</span></h3>
-                <h4>Peoples Love</h4>
-              </div>
-            </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- Counter Section End -->
+    </section>
+    <!-- stop -->
 
     <div id="RQ3" class="section">
       <div class="container">
@@ -284,48 +244,20 @@
       </div>
     </div>
 
-      <!-- testimonial Section Start -->
-      <div id="testimonial" class="section" data-stellar-background-ratio="0.1">
-        <div class="container">
-          <div class="row justify-content-md-center">
-            <div class="col-md-12">
-              <div class="touch-slider owl-carousel owl-theme">
-                <div class="testimonial-item">
-                 <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                    <h3>Jone Deam</h3>
-                    <span>Fondor of Jalmori</span>
-                  </div>
-                </div>
-                <div class="testimonial-item">
-                
-                  <div class="testimonial-text">
-                    <p>Some results here</p>
-                    <h3>Oidila Matik</h3>
-                    <span>President Lexo Inc</span>
-                  </div>
-                </div>
-                <div class="testimonial-item">
-                  <div class="testimonial-text">
-                    <p>Some results here</p>
-                    <h3>Alex Dattilo</h3>
-                    <span>CEO Optima Inc</span>
-                  </div>
-                </div>
-                <div class="testimonial-item">
-                  <div class="testimonial-text">
-                    <p>Some results here</p>
-                    <h3>Paul Kowalsy</h3>
-                    <span>CEO & Founder</span>
-                  </div>
-                </div>
+     <!-- Stop -->
+    <section class="video-promo section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+              <div class="video-promo-content text-center">
+                <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">End</h2>
+                <a href="#" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-code"></i></a>
               </div>
-            </div>
-          </div>        
+          </div>
         </div>
       </div>
-      <!-- testimonial Section Start -->
-
+    </section>
+    <!-- stop -->
     <!-- Team section Start -->
     <section id="team" class="section">
       <div class="container">
